[gd_scene load_steps=4 format=2]

[ext_resource path="res://SimpleCalc.gd" type="Script" id=1]
[ext_resource path="res://montserrat_bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://montserrat_regular.tres" type="DynamicFont" id=3]

[node name="calc" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.0
margin_top = 56.0
margin_right = 156.0
margin_bottom = 96.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Calculator[/center]"
text = "Calculator"
scroll_active = false

[node name="screen" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.0
margin_top = 144.0
margin_right = 156.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 3 )
align = 2
placeholder_text = "Start calculate!"

[node name="7" type="Button" parent="."]
margin_left = 24.0
margin_top = 224.0
margin_right = 96.0
margin_bottom = 296.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = ExtResource( 2 )
text = "7"

[node name="8" type="Button" parent="."]
margin_left = 104.0
margin_top = 224.0
margin_right = 176.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 2 )
text = "8"

[node name="9" type="Button" parent="."]
margin_left = 184.0
margin_top = 224.0
margin_right = 256.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 2 )
text = "9"

[node name="div" type="Button" parent="."]
margin_left = 264.0
margin_top = 224.0
margin_right = 336.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 2 )
text = "/"

[node name="4" type="Button" parent="."]
margin_left = 24.0
margin_top = 304.0
margin_right = 96.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 2 )
text = "4"

[node name="5" type="Button" parent="."]
margin_left = 104.0
margin_top = 304.0
margin_right = 176.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 2 )
text = "5"

[node name="6" type="Button" parent="."]
margin_left = 184.0
margin_top = 304.0
margin_right = 256.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 2 )
text = "6"

[node name="mul" type="Button" parent="."]
margin_left = 264.0
margin_top = 304.0
margin_right = 336.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 2 )
text = "*"

[node name="1" type="Button" parent="."]
margin_left = 24.0
margin_top = 384.0
margin_right = 96.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="2" type="Button" parent="."]
margin_left = 104.0
margin_top = 384.0
margin_right = 176.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 2 )
text = "2"

[node name="3" type="Button" parent="."]
margin_left = 184.0
margin_top = 384.0
margin_right = 256.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 2 )
text = "3"

[node name="sub" type="Button" parent="."]
margin_left = 264.0
margin_top = 384.0
margin_right = 336.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 2 )
text = "-"

[node name="clear" type="Button" parent="."]
margin_left = 24.0
margin_top = 544.0
margin_right = 176.0
margin_bottom = 616.0
custom_fonts/font = ExtResource( 2 )
text = "Clear"

[node name="equal" type="Button" parent="."]
margin_left = 184.0
margin_top = 544.0
margin_right = 336.0
margin_bottom = 616.0
custom_fonts/font = ExtResource( 2 )
text = "="

[node name="0" type="Button" parent="."]
margin_left = 24.0
margin_top = 464.0
margin_right = 176.0
margin_bottom = 536.0
custom_fonts/font = ExtResource( 2 )
text = "  0"
align = 0

[node name="dec" type="Button" parent="."]
margin_left = 184.0
margin_top = 464.0
margin_right = 256.0
margin_bottom = 536.0
custom_fonts/font = ExtResource( 2 )
text = "."

[node name="plus" type="Button" parent="."]
margin_left = 264.0
margin_top = 464.0
margin_right = 336.0
margin_bottom = 536.0
custom_fonts/font = ExtResource( 2 )
text = "+"

[connection signal="text_entered" from="screen" to="." method="_on_screen_text_entered"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="div" to="." method="_on_div_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="mul" to="." method="_on_mul_pressed"]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="sub" to="." method="_on_sub_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="equal" to="." method="_on_equal_pressed"]
[connection signal="pressed" from="0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="dec" to="." method="_on_dec_pressed"]
[connection signal="pressed" from="plus" to="." method="_on_plus_pressed"]
